main.css
/* ... */
.efeito a::before {
    margin-right:5px;content:'>';transform:translateX(20px)
}

.efeito a:hover::before,.efeito a:hover::after,.efeito a:focus::before,.efeito a:focus::after{
    opacity:1;transform:translateX(0)
}

li .efeito > a {
    padding:10px 0;text-shadow:none;outline:0
}

.mais-itens {
    display: none;
}

/* galeria */

.galeria {
    margin-top: 100px;
}

.galeria-texto {
    text-align: center;
}

.galeria-itens {
    margin-top: 30px;
    display: grid;
    grid-template-columns: repeat(5, 19.2%);
    column-gap: 1%;
    row-gap: 1%;
}

h2 {
    font-family: 'March', sans-serif;  
    font-size: 32px;  
    color: #4E4138;
}

.galeria img {
    height: 200px;
    width: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.galeria img:hover {
    transform: scale(1.1);
}

.galeria-arroba {
    margin-top: 5px;
    float: right;
    font-size: 24px;
    padding: 10px 2px;
}

.galeria-arroba a {
    text-decoration: none;
    color: #4E4138;
}

.galeria-arroba a:hover{
    text-decoration: underline;
}

.contato {
    margin-top: 100px;
    background-color: #4E4138;
    background-size: 100%;
    padding: 60px
}

.contato h2 {
    display: flex;
    color: #fff;
    margin: 0 auto;
    justify-content: center;
}

form {
    display: flex;
    justify-content: center;
    padding: 60px;
}

.campo-email {
    border: 2px solid #fff;
    background-color: transparent;
    padding: 8px;
    margin-right: 18px;
    width: 30%;
}

button {
    background-color: #DBD4BF;  
    padding: 8px; 
    width: 20%;
    text-transform: uppercase;
    font-family: 'EffraLight', sans-serif;
    font-weight: bold;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

footer {
    height: 50px;
    padding: 12px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
}

footer p {
    margin-right: 10px;
}

.footer-icones {
    display: flex;
}

.footer-icones ul {
    display: flex;
}

.footer-icones li {
    list-style: none;
    margin-right: 8px;
    align-items: center;
}

.footer-icones img {
    height: 15px;
}

@media screen and (max-width: 767px) { /* celular */ 

    .container {
        max-width: 90%;
    }
    
    .logo {
        display: flex;
        justify-content: center;
        margin: 0 auto;
    }

    section h2 {
        font-size: 25px;
    }

    .titulo {
        font-size: 100px;
        padding: 100px;
        align-items: center;
        justify-content: center;
    }
    
    .menu {
        display: none;
        text-align: center;
    }

    .menu > li {
        list-style: none;
        padding: 16px;
        border: none;
    }

    .btn-menu {
        display: flex;
        justify-content: center;
        margin-top: 16px;
    }

    .btn-menu button {
        background-color: transparent;
    }

    .btn-menu img {
        height: 30px;
    }
    
    .btn-menu:hover .menu {
        display: block;
        width: 100%;
        position: relative;
        border: none;
    }

    .menu li {
        display: block;
        padding: 8px;
        width: 60px;
    }

    .menu, .menu > li  {
        width: 100%;
        display: block;
    }

    .menu {
        display: none;
    }
    
    .menu > li { /* filho direto */
        clear: both;
    }
    
    .menu li:hover { /* filho direto */
        border: none;
    }

    .sobre {
        display: grid;
        grid-template-columns: 100%;
        margin-top: 30px;
    }

    .sobre-img {
        display: flex;
        justify-content: center;
    }

    .sobre-img img {
        height: 400px;
    }

    .sobre-texto {
        text-align: center;
        padding: 50px 0 0 0;
        flex-direction: column;
    }

    .sobre-texto p {
        margin: 20px auto;
        width: 80%;
    }

    .sobre-icones {
        justify-content: center;
    }

    
    .sobre-icones ul {
        display: flex;
        justify-content: center;
    }

    .itens {
        margin: 100px 0;
        max-width: 100%;
    }

    .itens-grid {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        column-gap: 2%;
        row-gap: 3%;
        margin-bottom: 100px;
    }

    .itens-texto {
        display: flex;
        justify-content: center;
        grid-template-columns: 100%;
    }

    .itens-texto p {
        display: flex;
        justify-content: center;
    }

    .item img {
        height: 400px;
        /* object-fit: fill; */
    }

    .topo-item {
        font-size: 14px;
    }

    .carrinho {
        font-size: 12px;
        text-align: center;
    }

    .info img, .like img {
        height: 12px;
        opacity: 1;
    }

    .btn-itens a{
        text-decoration: none;
        color: #4E4138;
    }

    .btn-container {
        display: flex;
        justify-content: center;
    }
    
    .btn-itens {
        margin-top: 100px;
    }

    .btn-itens a {
        text-align: center;
    }

    .galeria-texto {
        text-align: center;     
    }

    .galeria-itens {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        column-gap: 1%;
        row-gap: 1%;
    }

    .galeria-arroba {
        margin-top: 30px;
        text-decoration: underline;
    }

    .hide-on-mobile {
        display: none;
    }

    form {
        display: grid;
    }

    .contato-texto h2 {
        text-align: center;
    }
    
    .contato .campo-email, button {
        grid-template-columns: 100%;
        /* display: block; */
        margin-bottom: 15px;
        /* row-gap: 20px; */
        width: 300px;
        /* justify-content: center; */
    }
    
    footer p {
        font-size: 12px;
    }

    .footer-icones img {
        height: 14px;
    }


}
/* ... */

